FIX READING PROGRESS WIDGET Z-INDEX

--- a/Blog/static/Blog/CSS/styles.css
+++ b/Blog/static/Blog/CSS/styles.css
@@ -931,6 +931,7 @@ svg.tea #steamR {
 #reading_progress_bar::after {
 	right: 0;
 	opacity: 0;
+	z-index: 6;
 	top: -0.7em;
 	height: 1.45em;
 	min-width: 1.4em;
